# chatbot

./: .gitignore  RAG.md  README.md  app.py  chatbotchatgpt.py  pyproject.toml  requirements.txt
src/chatbot_app/: __init__.py
src/chatbot_app/core/: pdf_utils.py  retriever.py
src/chatbot_app/ui/: streamlit_app.py
tests/: test_retriever.py
