[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-chatbot"
version = "0.1.0"
description = "A production-ready starter structure for a PDF-based chatbot."
requires-python = ">=3.9"
dependencies = [
  "streamlit>=1.40.2",
  "pdfplumber>=0.11.8"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
